--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,4 +1,4 @@
-h1 {
-   font-family: sans-serif;
-   color: rgb(48, 110, 243);
-}
+@import "variables";
+@import "defaults";
+@import "utilities";
+@import "tags";
