--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,10 +1,10 @@
 $main-blue: #1789FC;
-$main-yellow: #1789FC;
-$main-red: #1789FC;
+$main-yellow: #DE9502;
+$main-red: #DF2727;
 
-$dark-blue: #1789FC;
-$dark-yellow: #1789FC;
-$dark-red: #1789FC;
+$dark-blue: #296EB4;
+$dark-yellow: #B1740F;
+$dark-red: #981717;
 
 $small: 1rem;
 $large: 1.25rem;
