--- a/frontend/src/components/button/button.module.scss
+++ b/frontend/src/components/button/button.module.scss
@@ -10,56 +10,59 @@
   border-radius: 0.250rem;
   font-size: 1rem;
   margin: 0.5rem 0.5rem 0.5rem 0;
+  border: 2px solid;
+  transition: all 200ms ease-in-out;
+  font-weight: 500;
 
   &.large {
     font-size: 1.25rem;
   }
 
-  &.hollow {
-    border: 1px solid;
-  }
-
   &.blue {
     background-color: $main-blue;
+    border-color: $main-blue;
 
     &.hollow {
       background-color: white;
       color: $main-blue;
-      border-color: $main-blue;
     }
 
     &:hover {
       background-color: $dark-blue;
+      border-color: $dark-blue;
       color: white;
     }
   }
 
   &.yellow {
     background-color: $main-yellow;
+    border-color: $main-yellow;
+
 
     &.hollow {
       background-color: white;
       color: $main-yellow;
-      border-color: $main-yellow;
     }
 
     &:hover {
       background-color: $dark-yellow;
+      border-color: $dark-yellow;
       color: white;
     }
   }
 
   &.red {
     background-color: $main-red;
+    border-color: $main-red;
 
     &.hollow {
       background-color: white;
       color: $main-red;
-      border-color: $main-red;
     }
 
     &:hover {
       background-color: $dark-red;
+      border-color: $dark-red;
       color: white;
     }
   }
