fix common input styles

--- a/frontend/src/components/input-field/inputField.module.scss
+++ b/frontend/src/components/input-field/inputField.module.scss
@@ -9,7 +9,7 @@
   margin: 0.75rem 0;
 
   .error {
-    color: $dark-red;
+    color: $main-red;
     font-size: 1.5rem;
     font-weight: bold;
     @include md {
@@ -23,6 +23,7 @@
   label {
     font-size: 1.5rem;
     font-weight: bold;
+    margin-bottom: 0.25rem;
     @include md {
       font-size: 1rem;
     }
@@ -38,13 +39,20 @@
     border-radius: 0.25rem;
     background-color: $grey;
     font-size: 1.2rem;
+    line-height: 1.2rem;
+
+    &:focus, &:active{
+      border-color: darken($grey, 70);
+      outline-color: darken($grey, 70);
+    }
 
     &.inputError {
-      border: 1px solid $dark-red;
+      border: 2px solid $main-red;
     }
 
     @include lg {
       font-size: 1rem;
+      line-height: 1rem;
       padding: 0.6rem 0.8rem;
     }
   }
