--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -6,7 +6,7 @@ $dark-blue: #296EB4;
 $dark-yellow: #B1740F;
 $dark-red: #981717;
 
-$grey: #E5E5E5;
+$grey: #EFEFEF;
 
 $small: 1rem;
 $large: 1.25rem;
