--- a/frontend/src/components/checker-field/checkerField.module.scss
+++ b/frontend/src/components/checker-field/checkerField.module.scss
@@ -10,7 +10,7 @@
   &.inputError {
     border-left: 2px solid $main-red;
     margin-left: calc(-0.5rem - 2px);
-    padding-left: calc(0.5rem + 2px);
+    padding-left: calc(0.5rem);
   }
 
   .error {
