--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,4 +1,6 @@
 @import "variables";
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/regular";
 @import "defaults";
 @import "mixins";
 @import "utilities";
