--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -15,3 +15,15 @@ $screen-sm-min: 576px;
 $screen-md-min: 768px;
 $screen-lg-min: 992px;
 $screen-xl-min: 1200px;
+
+$font-small-label: 12px;
+$font-large-label: 14px;
+
+$font-small-input-label-text: 14px;
+$font-large-input-label-text: 16px;
+
+$font-small-sm-button: 14px;
+$font-small-lg-button: 16px;
+
+$font-large-sm-button: 16px;
+$font-large-lg-button: 20px;
