--- a/frontend/src/components/select-field/selectField.module.scss
+++ b/frontend/src/components/select-field/selectField.module.scss
@@ -13,25 +13,19 @@
 
   .error {
     color: $main-red;
-    font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 0.3rem;
-    @include md {
-      font-size: 1rem;
-    }
-    @include lg {
-      font-size: 0.75rem;
+    font-size: $font-small-input-label-text;
+    @include lg{
+      font-size: $font-large-input-label-text;
     }
   }
 
   label {
-    font-size: 1.5rem;
     font-weight: bold;
-    @include md {
-      font-size: 1rem;
-    }
-    @include lg {
-      font-size: 0.75rem;
+    font-size: $font-small-label;
+    @include lg{
+      font-size: $font-large-label;
     }
   }
 
@@ -68,15 +62,17 @@
       border: none;
       border-radius: 0.25rem;
       background-color: $grey;
-      font-size: 1.2rem;
       position: relative;
+      font-size: $font-small-input-label-text;
+      @include lg{
+        font-size: $font-large-input-label-text;
+      }
 
       &.inputError {
         border: 1px solid $main-red;
       }
 
       @include lg {
-        font-size: 1rem;
         padding: 0.6rem 0.8rem;
       }
     }
