Add basic header

--- a/frontend/src/styles/_defaults.scss
+++ b/frontend/src/styles/_defaults.scss
@@ -27,11 +27,11 @@
 
 .app{
   display: flex;
+  flex-direction: column;
   justify-items: center;
   align-items: center;
   justify-content: center;
   align-content: center;
-  padding: 2rem 0;
 }
 
 button {
