Change button to div

--- a/frontend/src/components/button/button.module.scss
+++ b/frontend/src/components/button/button.module.scss
@@ -2,6 +2,8 @@
 @import "../../styles/mixins";
 
 .button {
+  display: inline-block;
+  cursor: pointer;
   text-wrap: normal;
   max-width: 100%;
   text-align: center;
