--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -56,20 +56,21 @@ h2 {
 
 .twoColumn {
    p {
-      margin: 2rem 4rem;
+      margin: 2rem 0;
       text-align: center;
    }
 
    @include sm {
       display: flex;
+      gap: 2rem;
       p {
          text-align: left;
-         margin: 2rem 1.5rem;
+         margin: 2rem 0;
          width: 50%;
       }
    }
 
    @include xl {
-      padding: 0 5rem;
+      padding: 0 0rem;
    }
 }
