--- a/frontend/src/components/header/header.module.scss
+++ b/frontend/src/components/header/header.module.scss
@@ -10,6 +10,7 @@
       margin: 1.5rem auto;
       display: flex;
       align-items: center;
+      justify-content: space-between;
 
       @include md {
          width: 90%;
@@ -17,14 +18,5 @@
       @include lg {
          width: 70%;
       }           
-   }
-
-   .logo {
-      height: 2.5rem;
-   }
-
-   .logout {
-      margin-left: auto;
-      margin-right: 0;
    }
 }
